complete landing page

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -20,8 +20,40 @@ html, body {
 
 .homeText {
     color: white;
-    max-width: 400px;
+    max-width: 500px;
     font-size: 25px;
     font-weight: bold;
     font-family: 'Lucida Console', Monaco, monospace;
+}
+
+.buttonWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.signInButton {
+    background-color: #A2DB93;
+    border: none;
+    border-radius: 5px;
+    width: 150px;
+    height: 30px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: 'Lucida Console', Monaco, monospace;
+    cursor: pointer;
+}
+
+.registerButton {
+    background-color: black;
+    color: #A2DB93;
+    border: none;
+    border-radius: 5px;
+    width: 150px;
+    height: 30px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: 'Lucida Console', Monaco, monospace;
+    cursor: pointer;
 }
